--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^8.5.1",
-    "mongoose-currency": "^0.3.0"
-    "lodash": "^4.17.21",
+    "mongoose-currency": "^0.3.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
