--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.1"
   },
   "devDependencies": {
